[package]
name = "multidate"
version = "0.2.1"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Print multiple timezones' dates/times with offsets from the local time."
repository = "https://github.com/cdown/multidate"
readme = "README.md"
keywords = ["date", "timezone"]
categories = ["command-line-utilities"]
license = "MIT"


[dependencies]
anyhow = { default-features = false, version = "1.0.75" }
chrono = { features = ["clock"], default-features = false, version = "0.4.31" }
chrono-tz = { default-features = false, version = "0.8.6" }
clap = { version = "4.4.10", default-features = false, features = ["std", "derive", "help"] }
