[package]
name = "multidate"
version = "0.2.3"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Print multiple timezones' dates/times with offsets from the local time."
repository = "https://github.com/cdown/multidate"
readme = "README.md"
keywords = ["date", "timezone"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.74"


[dependencies]
anyhow = { default-features = false, version = "1.0.94" }
chrono = { features = ["clock"], default-features = false, version = "0.4.38" }
chrono-tz = { default-features = false, version = "0.10.0" }
clap = { version = "4.5.21", default-features = false, features = ["std", "derive", "help", "error-context"] }
